Fix for 1.8 compatibility